[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Enemy_Interface.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/GUI/GUI_Movement.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/GUI/Enemy_Bar_Over.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/GUI/Bar_Over.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/GUI/Bar_Under.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/GUI/GUI_Fist.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/GUI/Juice_Bar_Progress.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/GUI/GUI_Shield.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/GUI/HP_Bar_Progress.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/GUI/GUI_EnemyPanel.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/GUI/GUI_AttSpeed.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/apple.png" type="Texture" id=12]
[ext_resource path="res://Assets/Themes/GUI_Label_Theme.tres" type="Theme" id=13]

[node name="Enemy_Interface" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -29.0
margin_right = 117.0
mouse_filter = 1
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit_Pic" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 26.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack_Symbol" type="TextureRect" parent="."]
margin_left = 129.0
margin_top = 6.0
margin_right = 169.0
margin_bottom = 46.0
texture = ExtResource( 6 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Attack_Symbol"]
margin_left = 12.0
margin_top = -4.0
margin_right = 52.0
margin_bottom = 14.0
theme = ExtResource( 13 )
text = "100"

[node name="Defense_Symbol" type="TextureRect" parent="."]
margin_left = 129.0
margin_top = 16.0
margin_right = 169.0
margin_bottom = 56.0
texture = ExtResource( 8 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Defense_Symbol"]
margin_left = 12.0
margin_top = -4.0
margin_right = 52.0
margin_bottom = 14.0
theme = ExtResource( 13 )
text = "100"

[node name="AttSpeed_Symbol" type="TextureRect" parent="."]
margin_left = 180.0
margin_top = 6.0
margin_right = 220.0
margin_bottom = 46.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AttSpeed_Symbol"]
margin_left = 12.0
margin_top = -4.0
margin_right = 52.0
margin_bottom = 14.0
theme = ExtResource( 13 )
text = "100"

[node name="Movement_Symbol" type="TextureRect" parent="."]
margin_left = 180.0
margin_top = 16.0
margin_right = 220.0
margin_bottom = 56.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Movement_Symbol"]
margin_left = 12.0
margin_top = -4.0
margin_right = 52.0
margin_bottom = 14.0
theme = ExtResource( 13 )
text = "100"

[node name="HP_Bar" type="TextureProgress" parent="."]
margin_left = 34.0
margin_top = 4.0
margin_right = 114.0
margin_bottom = 12.0
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 5
stretch_margin_right = 4
stretch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="HP_Bar"]
margin_left = 3.0
margin_top = -3.0
margin_right = 43.0
margin_bottom = 15.0
theme = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[color=black]HP[/color]"
text = "HP"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HP_Bar"]
margin_left = 38.0
margin_top = -3.0
margin_right = 78.0
margin_bottom = 11.0
grow_horizontal = 0
theme = ExtResource( 13 )
text = "100/100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Juice_Bar" type="TextureProgress" parent="."]
visible = false
margin_left = 34.0
margin_top = 15.0
margin_right = 114.0
margin_bottom = 23.0
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Juice_Bar"]
margin_left = 2.0
margin_top = -3.0
margin_right = 42.0
margin_bottom = 15.0
theme = ExtResource( 13 )
text = "JUICE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="NinePatchRect" parent="."]
margin_top = -28.0
margin_right = 234.0
margin_bottom = 1.0
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Tooltip"]
margin_left = 3.0
margin_top = -1.0
margin_right = 228.0
margin_bottom = 28.0
theme = ExtResource( 13 )
bbcode_enabled = true
scroll_active = false

[node name="Unit_Tooltip" type="NinePatchRect" parent="."]
margin_top = -73.0
margin_right = 234.0
margin_bottom = 1.0
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Unit_Tooltip"]
margin_left = 3.0
margin_top = 2.0
margin_right = 232.0
margin_bottom = 72.0
theme = ExtResource( 13 )
bbcode_enabled = true
scroll_active = false

[connection signal="mouse_exited" from="." to="." method="_on_Unit_Interface_mouse_exited"]
[connection signal="mouse_entered" from="Unit_Pic" to="." method="_on_Unit_Pic_mouse_entered"]
[connection signal="mouse_entered" from="Attack_Symbol" to="." method="_on_Attack_Symbol_mouse_entered"]
[connection signal="mouse_entered" from="Defense_Symbol" to="." method="_on_Defense_Symbol_mouse_entered"]
[connection signal="mouse_entered" from="AttSpeed_Symbol" to="." method="_on_AttSpeed_Symbol_mouse_entered"]
[connection signal="mouse_entered" from="Movement_Symbol" to="." method="_on_Movement_Symbol_mouse_entered"]
